[package]
name = "solana-client-nonblocking-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
solana-client = "1.10.25"
solana-sdk = "1.10.25"

[dev-dependencies]
tokio = { version = "1.14.1", features = ["full"] }
